# IMAS-Standard-Names

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLI_ENHANCEMENT_PLAN.md  CONTRIBUTING.md  Dockerfile  README.md  extract_equilibrium_names.py  hatch_build_hooks.py  latest  mkdocs.yml  pyproject.toml  standardnames.yml  tools.json  versions.json
.codex/: config.toml
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: create-standard-name.yml  initiate-from-data-dictionary.yml  standard-name.yml
.github/instructions/: copilot.instructions.md
.github/prompts/: _deprecated-standard_name_generation_prompt.prompt.md  generate_standard_names_from_imas_paths.prompt.md  standard-name-batch.prompt.md  standard-name-list.prompt.md  standard-name.prompt.md
.github/workflows/: apply-labels.js  apply-labels.yml  build-docs.yml  build.yml  deploy-docs.yml  docs.yml  imas-standard-name.yml  process-standard-name.yml  python-package.yml  release.yml  sync-files.yml  sync-github-files.yml  test-project.yml  test.yml
0.3/: index.html  sitemap.xml
0.3/guidelines/: index.html
app/: __init__.py  generate.py  imas_connect.py  structures.py
docs/: __init__.py  canonical-qualifier-order.html  catalog-expert-review-remediation.html  catalog-naming-followups.html  catalog.md  docs-campaign-before-after.html  expert-review-fixes.html  expert-review-reply.html  generic_names.csv  grammar-reference.md  grammar_macros.py  guidelines.md  independent-review-fixes.html  index.html  index.md  metadata-conventions.md  model-selection-and-global-refine.html  provenance.md  qualifier-vocabulary-categorization.html  quickstart.md  reductions.md  roadmap.md  schema_tool_redesign.md  sn-boundary-averaged-name-multiplicity.html  sn-compound-species-naming.html  sn-dd-unit-curation.html  sn-fusion-neutron-rate-naming.html  sn-model-selection-2026-07.html  sn-pedestal-source-recovery.html  sn-provenance-ledger.html  sn-symbol-definition-policy.html  specification.md  specification.md.backup  standard-names-systematic-review.html  standard_name_generation_prompt.md  style-guide.md  systematic-review-remediation.html  tokamak-parameters.md  vocab-retrospective-rc21-rc26.md  vocab-retrospective.md
docs/architecture/: boundary.md  data-flow.md  grammar-vnext.md
docs/archive/: canonical-qualifier-order-s3-landed.html  catalog-expert-review-remediation-s76-landed.html  catalog-naming-followups-s2-landed.html  catalog-naming-followups-s3-landed.html  catalog-naming-followups-s6-landed.html  catalog-naming-followups-s7-landed.html  independent-review-fixes-dup-paths-classification.html  independent-review-fixes-vertical-vs-z-locked.html  model-selection-and-global-refine-s2-s3-landed.html  model-selection-and-global-refine-s4-landed.html  model-selection-and-global-refine-s5-launch-gates-landed.html  model-selection-and-global-refine-s5-pilot-landed.html  model-selection-and-global-refine-s5-rotation1-halted.html  model-selection-and-global-refine-s5-rotation1-landed.html  model-selection-and-global-refine-s5-rotations-landed.html  qualifier-vocabulary-categorization-s2-landed.html  sn-boundary-averaged-name-multiplicity-followups-landed.html  sn-boundary-averaged-name-multiplicity-s3-landed.html  sn-boundary-averaged-name-multiplicity-s4-landed.html  sn-dd-unit-curation-s3-landed.html  sn-dd-unit-curation-s4-landed.html  sn-pedestal-source-recovery-landed.html  sn-provenance-ledger-landed.html  systematic-review-remediation-s2-landed.html  systematic-review-remediation-s3-landed.html  systematic-review-remediation-s4-landed.html  systematic-review-remediation-s5-landed.html  systematic-review-remediation-s6-landed.html  systematic-review-remediation-s7-landed.html
docs/development/: catalog-development-guide.md  catalog-interface.md  catalog-site-cli.md  contributing.md  provenance.md  quickstart.md  reductions.md  specification.md  style-guide.md
docs/javascripts/: anchor-scroll.js  (+1 more)
examples/: README.md  derived_scalar_operator.py  derived_scalar_reduction.py  derived_vector_gradient.py  scalar_basic.py  standard_name_usage.py  vector_basic.py
imas_standard_names/: __init__.py  __main__.py  artifacts.py  capabilities.py  catalog.py  data_dictionary.py  field_types.py  generic_names.py  image_processor.py  mcp_imas.py  models.py  name_generator.py  operators.py  ordering.py  paths.py  provenance.py  reductions.py  repositories.py  repository.py  schema.py  scripts.py  server.py  services.py  standard_name.py  tmp.py  tokamak_parameters.py  unit_of_work.py  uow.py  value_provenance.py  yaml_store.py
issue-10/: transformations.csv
issue-4/: generic_names.csv
issue-7/: sitemap.xml
issues/: versions.json
main/: 404.html  index.html  sitemap.xml
plans/: fleet-dispatch-prompts.md
site/: README.md  index.html  package-lock.json  package.json  vite.config.js
submit/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_binary_operator_source_parity.py  test_binary_operators.py  test_build_round_trip.py  test_catalog_filename_resolution.py  test_catalog_loader_and_search.py  test_catalog_reload_after_commit.py  test_catalog_renderer.py  test_catalog_state_management.py  test_check_standard_names.py  test_cli_commands.py  test_codegen_drift.py  test_compose_tool.py  test_d5_vocabulary.py  test_decomposition_segment.py  test_deprecation_stub.py  test_description_validation.py  test_domain_catalog_layout.py  test_edit_tool_features.py  test_example_drift.py  test_fetch_standard_names.py  test_generic_physical_bases.py  test_grammar_ambiguity.py  test_grammar_imports.py  test_grammar_round_trip.py  test_image_processor.py  test_integrity.py  test_json_schema_contract.py  test_list_standard_names_tool.py  test_measurement_location_advisory.py  test_model_grammar_sync.py  test_name_only_entry.py  test_names_tool_renamed.py  test_naming_grammar_tool.py  test_ordering_dependencies.py  test_overview_tool.py  test_paths_resolve_path.py  test_paths_resolve_root.py  test_pending_tracking_bug.py  test_plan40_catalog_layout.py  (+48 more)
tools/: validate_catalog.py
(+508 files in other folders)
