[project]
name = "imas-standard-names"
dynamic = ["version"]
description = "A collection of Standard Names used in the Fusion Conventions and logic for creating a static website for documentation."
authors = [
  { name = "Maarten Sebregts", email = "msebregts@ignitioncomputing.com" },
  { name = "Simon McIntosh", email = "simon.mcintosh@iter.org" },
]
license = { text = "CC BY-ND 4.0" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "strictyaml (>=1.7.3,<2.0.0)",
  "pydantic (>=2.10.6,<3.0.0)",
  "click (>=8.1.8,<9.0.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "pint (>=0.24.4,<0.25.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "tabulate (>=0.9.0,<0.10.0)",
  "requests (>=2.32.3,<3.0.0)",
  "markdown (>=3.8,<4.0)",
]
keywords = [
  "fusion",
  "standard names",
  "IMAS",
  "ITER",
  "fusion conventions",
  "fusion data",
  "fusion research",
]
[project.urls]
"Documentation" = "https://simon-mcintosh.github.io/IMAS-Standard-Names/"

[project.scripts]
has_standardname = "imas_standard_names.scripts:has_standardname"
update_standardnames = "imas_standard_names.scripts:update_standardnames"
subtract_standardnames = "imas_standard_names.scripts:subtract_standardnames"
get_standardname = "imas_standard_names.scripts:get_standardname"
is_genericname = "imas_standard_names.scripts:is_genericname"
update_links = "imas_standard_names.scripts:update_links"

[project.optional-dependencies]
agent = [
  "dotenv (>=0.9.9,<0.10.0)",
  "fastmcp (>=2.2.6,<3.0.0)",
  "imas-data-dictionary (>=4.0.0.post1,<5.0.0)",
  "pydantic-ai (>=0.1.3,<0.2.0)",
  "imas-python (>=2.0.0,<3.0.0); python_version < '3.13'",
]
test = [
  "pytest (>=8.3.4,<9.0.0)",
  "pytest-cov (>=4.1.0,<5.0.0)",
  "pytest-html (>=4.1.1,<5.0.0)",
  "ruff (>=0.9.8,<1.0.0)",
]
docs = [
  "mike (>=2.1.3,<3.0.0)",
  "mkdocs (>=1.6.1,<2.0.0)",
  "mkdocs-macros-plugin (>=1.0.4,<2.0.0)",
  "mkdocs-material (>=9.6.5,<10.0.0)",
  "mkdocs-data-plugin (>=0.2.0,<0.3.0)",
  "mkdocs-table-reader-plugin (>=3.1.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.1", "poetry-dynamic-versioning>=1.4"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "imas-standard-names"
version = "0.0.0"
package-mode = true
exclude = [".github"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^4.1.0"
pandas-stubs = "^2.2.3.250308"
types-pyyaml = "^6.0.12.20241230"
logfire = "^3.14.0"
mcp-cli = "^0.1.0"
ruff = "^0.11.10"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
poetry-plugin-shell = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
poetry-plugin-export = ">=1.8"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format = "{base}+{distance}.{commit}"

[[tool.mypy.overrides]]
module = ["strictyaml"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ['__init__.py']
