[project]
name = "imas-standard-names"
dynamic = ["version"]
description = "A collection of Standard Names used in the Fusion Conventions and logic for creating a static website for documentation."
authors = [
  { name = "Maarten Sebregts", email = "msebregts@ignitioncomputing.com" },
  { name = "Simon McIntosh", email = "simon.mcintosh@iter.org" },
]
license = { text = "CC BY-ND 4.0" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "strictyaml>=1.7.3,<2.0.0",
  "pydantic>=2.10.6,<3.0.0",
  "click>=8.1.8,<9.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "pint>=0.24.4,<0.25.0",
  "markdown>=3.8,<4.0",
  "fastmcp~=3.2.0",
]
keywords = [
  "fusion",
  "standard names",
  "IMAS",
  "ITER",
  "fusion conventions",
  "fusion data",
  "fusion research",
]
[project.urls]
"Documentation" = "https://iterorganization.github.io/IMAS-Standard-Names/"

[project.scripts]
has_standardname = "imas_standard_names.issues.cli:has_standardname"
get_standardname = "imas_standard_names.issues.cli:get_standardname"
is_genericname = "imas_standard_names.issues.cli:is_genericname"
update_links = "imas_standard_names.issues.cli:update_links"
validate_catalog = "imas_standard_names.validation.cli:validate_catalog_cli"
standard-names = "imas_standard_names.cli:standard_names"
standard-names-mcp = "imas_standard_names.cli.server:main"
build-grammar = "imas_standard_names.grammar_codegen.generate:main"
generate-schema = "imas_standard_names.schemas.generate:main"

[project.optional-dependencies]
# Pre-built catalog package (install for read-only access without YAML source).
# Activate once imas-standard-names-catalog is published to PyPI or a
# private index. Until then, use STANDARD_NAMES_CATALOG_ROOT env var.
# catalog = [
#   "imas-standard-names-catalog>=1.0.0",
# ]

# Quality validation and vocabulary management tools
quality = [
  "proselint>=0.14.0,<0.15.0",
  "spacy>=3.8.0,<4.0.0",
]

# Neo4j driver for imas_standard_names.graph.sync consumers.
# The pure-Python spec (imas_standard_names.graph.spec) needs no driver;
# only sync_grammar() callers do. imas-codex installs this extra.
graph = [
  "neo4j>=5.0",
]

# Local NetworkX-backed catalog graph (plan 41). Enables
# imas_standard_names.graph.local_graph + MCP traversal tools.
graph-local = [
  "networkx>=3.0",
]

test = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "pytest-html>=4.1.1,<5.0.0",
  "ruff>=0.9.8,<1.0.0",
]

docs = [
  "mike>=2.1.3,<3.0.0",
  "mkdocs>=1.6.1,<2.0.0",
  "mkdocs-macros-plugin>=1.0.4,<2.0.0",
  "mkdocs-material>=9.6.5,<10.0.0",
  "mkdocs-data-plugin>=0.2.0,<0.3.0",
  "mkdocs-table-reader-plugin>=3.1.0,<4.0.0",
  "mkdocs-include-markdown-plugin>=7.0.0,<8.0.0",
  "mkdocs-mermaid2-plugin>=1.1.0,<2.0.0",
]
[build-system]
requires = [
  "hatchling>=1.25.0",
  "hatch-vcs>=0.4.0",
  "pyyaml>=6.0.2",
  "pydantic>=2.10.6",
  "ruff>=0.9.8",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "hatch_build_hooks.py"

[tool.hatch.build.targets.wheel]
# Include codegen files in wheel (they're in .gitignore so need override)
artifacts = [
  "imas_standard_names/grammar/model_types.py",
  "imas_standard_names/grammar/constants.py",
  "imas_standard_names/grammar/tag_types.py",
  "imas_standard_names/grammar/field_schemas.py",
  "imas_standard_names/schemas/entry_schema.json",
]

[dependency-groups]
dev = [
  "pre-commit>=4.1.0,<5.0.0",
  "ruff>=0.11.10,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "pytest-html>=4.1.1,<5.0.0",
  "ipykernel>=6.29.5,<7.0.0",
  "pandas-stubs>=2.2.3.250308,<3.0.0",
  "types-pyyaml>=6.0.12.20241230,<7.0.0",
  "logfire>=4.16.0,<5.0.0",
  "mcp-cli>=0.1.0,<1.0.0",
  "pandas>=2.2.3,<3.0.0",
  # Include quality tools for development
  "proselint>=0.14.0,<0.15.0",
  "spacy>=3.8.0,<4.0.0",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[[tool.mypy.overrides]]
module = ["strictyaml"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ['__init__.py']

[tool.pytest.ini_options]
# No special anyio config needed - handled in conftest.py

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "PLC0415", # import-outside-top-level
]
ignore = ["C901", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"imas_standard_names/grammar/__init__.py" = [
  "F401",
  "I",
] # try/except guard for generated tag_types requires unsorted import block
"imas_standard_names/grammar/tags.py" = [
  "PLC0415",
] # Lazy imports avoid circular dependency with generated tag_types
"imas_standard_names/grammar/context.py" = [
  "PLC0415",
] # Lazy imports avoid circular dependency with models
"tests/**/*" = ["B011", "F401", "F811", "PLC0415"]
"imas_standard_names/grammar/field_schemas.py" = [
  "I",
] # Codegen file - skip formatting
"imas_standard_names/grammar/types.py" = ["I"] # Codegen file - skip formatting
"imas_standard_names/grammar/constants.py" = [
  "I",
] # Codegen file - skip formatting
"imas_standard_names/grammar/tag_types.py" = [
  "I",
] # Codegen file - skip formatting

[tool.ruff.lint.isort]
known-first-party = ["imas_standard_names"]
combine-as-imports = true
